--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>小野的个人网址~</title>
   </head>
   <body>
-    <h1>欢迎哇欢迎~</h1>
+    <img src="./zhunbeidetup.jpg/">
+    <h3>欢迎哇欢迎~</h3>
   </body>
 </html>
