--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>小野的个人网址~</title>
   </head>
   <body>
-    <img src="./zhunbeidetup.jpg/">
+    <img src='./zhunbeidetup.jpg/'>
     <h3>欢迎哇欢迎~</h3>
   </body>
 </html>
